--- a/src/style.scss
+++ b/src/style.scss
@@ -18,3 +18,8 @@
   font-weight: 700;
   font-style: normal;
 }
+
+html,
+body {
+  scrollbar-gutter: stable;
+}
